# vectorize-pro

./: .gitignore  LICENCE.MD  README.MD  __init__.py  export_svg.py  png_to_svg_pro.py  pyproject.toml  trigger.py
web/js/: augment_style.js
