[project]
name = "augment-VectorizePro"
description = "✨ augment Vectorize — PNG to SVG vectorizer for ComfyUI. Convert raster images, logos, and icons into clean scalable vector graphics. A professional vectorization tool built directly into your ComfyUI workflow via the Augment Studio API with automatic job polling and SVG output. Ideal for logo design, brand asset pipelines, and any workflow that needs crisp vector conversion. Includes built-in flow control trigger and wait nodes for chaining multi-step pipelines. Get your API key at https://augmentstudio.app/pricing"
version = "1.0.0"
licence = { file = "LICENCE.md" }

dependencies = [
    "numpy>=1.19.0",
    "torch>=1.9.0",
    "Pillow>=8.0.0",
    "requests>=2.25.0"
]

[project.urls]
Repository = "https://github.com/augment-lib/vectorize-pro"
Website = "https://augmentstudio.app/"

[tool.comfy]
PublisherId = "augmentstudio"
DisplayName = "✨ augment Vectorize Pro - PNG to SVG Vectorizer for ComfyUI"
Icon = "https://avatars.githubusercontent.com/u/243209371?s=400&u=db6e0d310dcf8863dd5c735d3ebbdaa5c317530d&v=4"
